--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
   "name": "eleven-realtime-database-starter",
   "version": "0.1.0",
+  "homepage": "http://rexlight80.github.io/Contacts-app-using-firebase",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "browser-image-resizer": "^2.1.3",
+    "firebase": "^8.0.2",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.1.0",
+    "reactstrap": "^8.7.1",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
