--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eleven-realtime-database-starter",
   "version": "0.1.0",
-  "homepage": "http://rexlight80.github.io/Contacts-app-using-firebase",
+  "homepage": "https://rexlight80.github.io/Contacts-app-using-firebase",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
@@ -11,7 +11,6 @@
     "bootstrap": "^4.5.3",
     "browser-image-resizer": "^2.1.3",
     "firebase": "^8.0.2",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
